--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@ a:hover{
     padding: 20px;
 }
 .nav-container{
-    position: fixed;
+    /* position: fixed; */
     left: 0;
     margin: 10px;
     height: 100vh;
@@ -83,7 +83,7 @@ a:hover{
 
 @media screen and (max-width:1170px){
     .main{
-        margin-left: 50px;
+        margin-left: auto;
     }
 }
 
